<resources>
    <string name="app_name">selfRegulation</string>
    <string name="userAccount">帳號</string>
    <string name="userPassword">密碼</string>
    <string name="clearInput">清除</string>
    <string name="userLogin">登入</string>
    <string name="welcomeMessage">最近過得如何呢?</string>
    <string name="homeScreen">首頁</string>
    <string name="healthScreen">健康</string>
    <string name="workScreen">工作</string>
    <string name="stressScreen">壓力</string>
    <string name="welcomeScreen">歡迎</string>
    <string name="defaultNumber">80</string>
    <string name="defaultNumberUnit">分</string>
    <string name="statusScore">今日狀態</string>
    <string name="rankTitle">由影響目前狀態的大小排序</string>
    <string-array name="rankArray">
        <item>01</item>
        <item>02</item>
        <item>03</item>
    </string-array>
    <string-array name="categoryArray">
        <item>健康</item>
        <item>工作</item>
        <item>壓力</item>
    </string-array>
    <string name="defaultStatusMessage">最近的你狀態很好!</string>
</resources>