<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".fragment.MainFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/progressGuildline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintGuide_begin="100dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="progressBarFrameLayout,message"
        />
    <FrameLayout
        android:id="@+id/progressBarFrameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/progressGuildline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       >
<!--ref：https://stackoverflow.com/questions/66977774/how-do-i-progressbar-circle-and-rounded-corner-android-kotlin-->
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:progress="@string/defaultNumber"
            app:indicatorColor="@color/dark_brown"
            app:indicatorSize="200dp"
            app:trackThickness="10dp"
            app:trackColor="@color/light_brown"
             />
    </FrameLayout>
    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/defaultNumber"
        android:textColor="@color/dark_brown"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressGuildline" />

    <TextView
        android:id="@+id/unitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:text="@string/defaultNumberUnit"
        android:textColor="@color/dark_brown"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/message"
        app:layout_constraintTop_toBottomOf="@id/progressGuildline" />

    <TextView
        android:id="@+id/messageStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_rect"
        android:gravity="center"
        android:text="@string/statusScore"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rankList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBarFrameLayout"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>